--- a/src/css/style.css
+++ b/src/css/style.css
@@ -224,10 +224,13 @@ aside .listCart{
     background-color: var(--color-categoria-todos);
 }
 
-aside .listCart .emptyCart{}
+aside .listCart .emptyCart{
+    display: none;
+}
 
 aside .listCart .emptyCartNone{
-    display: none;
+    display: flex;
+    flex-direction: column;
 }
 
 aside .listCart .emptyCart img{}
@@ -285,7 +288,7 @@ aside .listCart .productAmount{
     height: 58px;
 }
 
-aside .listCart .totalAmout{
+aside .listCart .totalAmount{
     display: flex;
     background-color: var(--color-font-carrinho);
     height: 58px;
