--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,8 +94,10 @@ header{
     padding-top: 10px;
     padding-right: 10px;
     width: 100%;
-
+    margin-bottom: 10px;
+    box-shadow: -4px 8px 5px -10px rgb(0 0 0 / 75%);
 }
+
 header img{
     width: 150px;
 }
@@ -516,9 +518,14 @@ aside .totalAmount{
 
 /* START media queries */
 @media screen and (min-width: 768px){
+    body{
+        padding: 0px;
+    }
+
     header{
         flex-direction: row;
         justify-content: space-between;
+        height: 90px;
     } 
 
     header form {
@@ -570,6 +577,7 @@ aside .totalAmount{
 
     aside {
         overflow-x: hidden;
+        margin-top: 80px;
     }
 
     #vitrineCarrinho{
