--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,6 +67,7 @@
     --color-effect-white: #F8F9FA;
     --color-effect-red: #FF2253;
     --color-effect-blue: #1228ea;
+    --color-effect-green2: #25e60b;
 
     /* END color-effects hover*/
 }
@@ -510,6 +511,10 @@ aside .totalAmount{
     height: 58px;
     padding: 0 10px;
 }
+/* END main */
+
+/* START footer */
+
 footer{
     display: flex;
     flex-direction: column;
@@ -535,12 +540,77 @@ footer{
     font-weight: 600;
     color: var(--color-effect-red);
 }
-/* END main */
 
-/* START footer */
 /* END footer */
 
 /* START extras */
+.modalNone{
+    display: none;
+}
+.ModalClose{
+    width: 24px;
+    align-self: flex-end;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.modal-adicionarProduto{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 500px;
+    width: 300px;
+    background-color: var(--color-categoria-todos);
+    border: 3px solid rgba(0,0,0,0.1);
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.modal-adicionarProduto div select{
+    margin-bottom: 10px;
+    height: 25px;
+    border-radius: 5px;
+    background-color: var(--color-font-carrinho);
+}
+
+.modal-adicionarProduto div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-adicionarProduto div input{
+    padding-left: 10px;
+    margin-top: 15px;
+    border: none;
+    border-radius: 7px;
+    height: 30px;
+    width: 230px;
+}
+
+.modal-button{
+    width: 150px;
+    height: 40px;
+    border: none;
+    background-color: var(--color-addcarrinho-verde);
+    border-radius: 10px;
+    color: var(--color-font-carrinho);
+    font-size: var(--font-size-carrinho);
+    cursor: pointer;
+}
+
+.modal-button:hover{
+    background-color: var(--color-effect-green2);
+}
+
 /* END extras */
 
 /* START media queries */
