--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,6 +66,7 @@
     --color-effect-green: #4ACA94;
     --color-effect-white: #F8F9FA;
     --color-effect-red: #FF2253;
+    --color-effect-red2: #f75578;
     --color-effect-blue: #1228ea;
     --color-effect-green2: #25e60b;
 
@@ -92,11 +93,12 @@ header{
 
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 140px;
     padding-top: 10px;
     padding-right: 10px;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     box-shadow: -4px 8px 5px -10px rgb(0 0 0 / 75%);
 }
 
@@ -112,6 +114,7 @@ header form{
     width: 100%;
     margin-top: 15px;
     margin-bottom: 15px;
+    justify-content: center;
 
 }
 
@@ -140,7 +143,7 @@ header form button{
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
-    right: 10%;
+    right: 45px;
     width: 40px;
     height: 40px;
     border-radius: 30px;
@@ -185,7 +188,7 @@ main section nav{
     display: flex;
     height: 40px;
     overflow-x: scroll;
-    margin-bottom: 28px;
+    margin-bottom: 18px;
 
 }
 
@@ -356,6 +359,7 @@ section ul li div .addCart{
     background-position: center;
     border-radius: 30px;
     border: 1.5px solid #F3EEF5;
+    cursor: pointer;
 }
 
 .addCart:hover{
@@ -371,6 +375,9 @@ aside{
     overflow-y: scroll;
     margin: 0 auto;
     margin-bottom: 50px;
+}
+aside::-webkit-scrollbar {
+    display: none;
 }
 
 aside .cartTitle{
@@ -410,7 +417,18 @@ aside .listCart .emptyCartNone{
     text-align: center;
     padding: 0px 60px;
 }
-
+.removeCart{
+    cursor: pointer;
+    background-image: url("../icons/icon-trash.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 12px;
+}
+.removeCart:hover{
+    background-color: var(--color-effect-red2);
+    background-image: url("../icons/icon-trashWhite.png");
+    background-size: 15px;
+}
 aside .listCart .emptyCartNone img{
     width: 50px;
     height: 50px;
@@ -522,11 +540,13 @@ footer{
     height: 80px;
     background-color: var(--color-categoria-todos);
     padding-left: 100px;
+    margin-top: 80px;
 }
 .adminProdutos{
     font-weight: 300;
     text-decoration: underline;
     cursor: pointer;
+    text-align: center;
 }
 .adminGreen:hover{
     font-weight: 600;
@@ -547,10 +567,17 @@ footer{
 .modalNone{
     display: none;
 }
+.DataProducts{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+.DataProducts h3{
+    width: 240px;
+    text-align: center;
+}
 .ModalClose{
     width: 24px;
-    align-self: flex-end;
-    margin-right: 10px;
     cursor: pointer;
 }
 
@@ -572,22 +599,36 @@ footer{
     z-index: 1;
     border-radius: 10px;
 }
+.Modal-Select{
+    display: flex;
+    justify-content: center;
 
-.modal-adicionarProduto div select{
+}
+.Modal-Select select{
     margin-bottom: 10px;
     height: 25px;
     border-radius: 5px;
     background-color: var(--color-font-carrinho);
+    margin-right: 10px;
 }
-
-.modal-adicionarProduto div{
+.Modal-Select img{
+    width: 20px;
+    height: 25px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+.Modal-Select img:hover{
+    width: 22px;
+    height: 26px;
+}
+.modal-adicionarProduto .ModalProductBox{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.modal-adicionarProduto div input{
+.modal-adicionarProduto .ModalProductBox input{
     padding-left: 10px;
     margin-top: 15px;
     border: none;
@@ -652,6 +693,7 @@ footer{
     main {
         flex-direction: row;
         flex-wrap: wrap;
+        height: 850px;
     }
 
     main ul {
@@ -675,6 +717,8 @@ footer{
     aside {
         overflow-x: hidden;
         margin-top: 80px;
+        width: 30%;
+        max-width: 300px;
     }
 
     #vitrineCarrinho{
